# Product-Review-Transcription-Service

./: .env  README.md  docker-compose.yaml  system_design.md
documentation/: project_management.md  system_design.md
documentation/development_logs/: day1.md  day2.md
documentation/diagrams/: database_schema.puml  transcription_flow.puml
src/backend_api/: .env  README.md  pyproject.toml
src/backend_api/app/: main.py  models.py  trascription_worker_client.py
src/backend_api/app/database/: database.py
src/backend_api/app/models/: models.py
src/backend_api/app/repositories/: video_repository.py
src/backend_api/app/routers/: healthcheck.py  transcription.py
src/backend_api/app/schemas/: transcription_schemas.py
src/backend_api/app/services/: transcription_service.py
src/backend_api/tests/: test_main.py
src/backend_api/tests/routers/: test_transcription.py
src/worker/: .env  celery_worker.py  requirements.txt
