[project]
name = "backend-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "celery>=5.5.1",
    "fastapi[standard]>=0.115.12",
    "psycopg2-binary>=2.9.10",
    "pytest>=8.3.5",
    "python-dotenv>=1.1.0",
    "redis>=5.2.1",
    "ruff>=0.11.6",
    "sqlalchemy>=2.0.40",
]
[tool.ruff]
line-length = 88
select = ["E", "W", "F"]
ignore = ["E501"]
